refactor: Fix name of class and method for dto